# ecommerce

./: .gitignore  Dockerfile  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
ecommerce/accounts/: admin.py  managers.py  models.py
ecommerce/accounts/migrations/: 0001_initial.py
ecommerce/ecommerce/: settings.py
