[project]
name = "ecommerce"
version = "0.1.0"
description = "An e-commerce platform"
authors = [
    { name = "Mdevpro78", email = "mdevpro.2020@gmail.com" }
]
license = { text = "BSD-3-Clause" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: BSD License",
]
readme = "README.rst"
requires-python = ">= 3.12.9"

dependencies = []

[project.urls]
repository = "https://github.com/pytower/ecommerce"

[tool.rye]
managed = true
virtual = true
